# Phone_Numbers_Regex_GUI

./: README.md  main.py  pyproject.toml  requirements.txt  setup.py
constants/: constants.py
domains/: domains.py
infrastructure/gui/: command_frame.py  compare_command_frame.py  compare_data_frame.py  data_frame.py  main_frame.py  main_window.py
interface_adapters/controllers/: pool_to_regex_controller.py  regex_to_pool_controller.py
interface_adapters/gui_adapters/: gui_adapter.py
interface_adapters/presentators/: pool_to_regex_presentator.py  regex_to_pool_presentator.py
use_cases/: optimization_pool_to_regex.py  optimization_regex_to_pool.py  pool_to_regex.py  regex_to_pool.py
