[project]
name = "phone-numbers-regex-gui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "altgraph==0.17.4",
    "asttokens==2.4.1",
    "certifi==2024.12.14",
    "cffi==1.17.1",
    "charset-normalizer==3.4.1",
    "colorama==0.4.6",
    "customtkinter==5.2.2",
    "cx-logging==3.2.0",
    "darkdetect==0.8.0",
    "exceptiongroup==1.2.1",
    "executing==2.0.1",
    "future==1.0.0",
    "gevent==24.11.1",
    "gevent-websocket==0.10.1",
    "greenlet==3.1.1",
    "icecream>=2.1.3",
    "idna==3.10",
    "importlib-metadata==8.0.0",
    "iniconfig==2.0.0",
    "lief==0.14.1",
    "packaging==24.1",
    "pefile==2023.2.7",
    "pluggy==1.5.0",
    "pycparser==2.22",
    "pygments==2.18.0",
    "pyparsing==3.2.1",
    "pywin32-ctypes==0.2.2",
    "six==1.16.0",
    "tomli==2.0.1",
    "typing-extensions==4.12.2",
    "urllib3==2.3.0",
    "zipp==3.19.2",
    "zope-event==5.0",
    "zope-interface==7.2",
]

[dependency-groups]
dev = [
    "cx-freeze>=7.2.10",
    "pytest>=8.3.5",
    "ruff>=0.11.0",
]
